2006-01-31  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/files/ass.py:
	* lib/gaupol/base/files/classes.py:
	* lib/gaupol/base/files/ssa.py:
	* lib/gaupol/base/tags/ass.py:
	* lib/gaupol/base/tags/classes.py:
	* lib/gaupol/base/tags/ssa.py:
	* lib/gaupol/constants.py:
	  Implemented partial read and write support for SSA and ASS.

	* lib/gaupol/base/files/microdvd.py:
	* lib/gaupol/base/files/mpl2.py:
	* lib/gaupol/base/files/subrip.py:
	* lib/gaupol/base/files/subviewer2.py:
	  Shortened docstrings.

2006-01-31  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/delegates/edit.py:
	  (EditDelegate.set_time, EditDelegate.set_frame): Use native mode
	  method for revert to avoid rounding errors.

2006-01-30  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/clipboard.py:
	* lib/gaupol/base/delegates/action.py:
	* lib/gaupol/base/delegates/edit.py:
	* lib/gaupol/base/delegates/fileopen.py:
	* lib/gaupol/base/delegates/format.py:
	* lib/gaupol/base/model.py:
	* lib/gaupol/base/timing/calc.py:
	* lib/gaupol/base/util/wwwlib.py:
	* lib/gaupol/gtk/delegates/fileopen.py:
	* lib/gaupol/gtk/delegates/preferences.py:
	* lib/gaupol/gtk/delegates/spellcheck.py:
	* lib/gaupol/gtk/dialogs/filechooser.py:
	* lib/gaupol/gtk/dialogs/message.py:
	* lib/gaupol/gtk/output.py:
	* lib/gaupol/gtk/page.py:
	* lib/gaupol/gtk/util/gtklib.py:
	* lib/gaupol/gtk/view.py:
	  Cosmetic changes to testing.

	* lib/gaupol/gtk/delegates/appupdate.py:
	  (ApplicationUpdateDelegate.set_status_message): Moved statusbar
	  popping inside the try-except clause to avoid  GtkWarnings.

2006-01-30  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/gtk/delegates/action.py:
	* lib/gaupol/gtk/delegates/edit.py:
	* lib/gaupol/gtk/delegates/fileclose.py:
	* lib/gaupol/gtk/delegates/fileopen.py:
	* lib/gaupol/gtk/delegates/filesave.py:
	* lib/gaupol/gtk/delegates/spellcheck.py:
	* lib/gaupol/gtk/delegates/view.py:
	* lib/gaupol/gtk/delegates/viewupdate.py:
	  Added testing.
	  Cosmetic changes.