@@ -1,5 +1,12 @@
 2006-01-31  Osmo Salomaa  <otsaloma@cc.hut.fi>
 
+	* lib/gaupol/gtk/cellrend/integer.py:
+	* lib/gaupol/gtk/cellrend/text.py:
+	* lib/gaupol/gtk/cellrend/time.py:
+	  Top-aligned cell contents.
+
+2006-01-31  Osmo Salomaa  <otsaloma@cc.hut.fi>
+
 	* lib/gaupol/base/files/ass.py:
 	* lib/gaupol/base/files/classes.py:
 	* lib/gaupol/base/files/ssa.py:
